# Nova_Voice_Engine_V31

./: CMakeLists.txt  QUICK_START.md  README.md  build_friend.sh  install_dependencies.sh  setup_for_friend.sh
src/common/: concurrent_queue.h  logger.h
src/core/: engine.cpp  engine.h  main.cpp  main_friend.cpp  udp_chat.cpp  udp_test.cpp  udp_test_friend.cpp
src/media/: erasure_coder.cpp  erasure_coder.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  slicer.cpp  slicer.h
src/network/: path_monitor.cpp  path_monitor.h  scheduler.cpp  scheduler.h  sender_receiver.cpp  sender_receiver.h
src/transport/: chunk.h  smart_collector.cpp  smart_collector.h
tests/: test_erasure_coder.cpp  test_scheduler.cpp
